enviando codigos feitos em aula

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,10 +2,10 @@
 <hr />
 <a href="/tarefa">Nova tarefa</a>
 
-<button (click)="criar()" mat-raised-button>
+<a href="/tarefa" mat-raised-button>
   <mat-icon>add</mat-icon>
   Criar
-</button>
+</a>
 
 <ol>
   <li *ngFor="let t of tarefas">
