codigos feitos em aula

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,6 +10,8 @@
 <ol>
   <li *ngFor="let t of tarefas">
     {{ t.titulo }}
+    
     <mat-slide-toggle [(ngModel)]="t.concluida"></mat-slide-toggle>
+    <button mat-button (click)="excluirTarefa(t.id!)"  > x </button>
   </li>
 </ol>
