--- a/src/app/pages/tarefa/tarefa.component.html
+++ b/src/app/pages/tarefa/tarefa.component.html
@@ -11,8 +11,8 @@
 <div>
   <label>Concluido? </label>
   <mat-radio-group [(ngModel)]="concluido">
-    <mat-radio-button value="true">Sim</mat-radio-button>
-    <mat-radio-button value="false">Não</mat-radio-button>
+    <mat-radio-button [value]="true">Sim</mat-radio-button>
+    <mat-radio-button [value]="false">Não</mat-radio-button>
   </mat-radio-group>
 </div>
 <button (click)="gravar()">Salvar</button>
